# NonoClaw

./: .gitignore  NONOCLAW.md  NONOCLAW.zh-CN.md  README.md  tui_out.txt
.claude/: settings.local.json.tmp.10057.89bcb5ca0c93  settings.local.json.tmp.10057.db835c6046fa  settings.local.json.tmp.16308.69485454d697  settings.local.json.tmp.3803.e19efba7a1d6  settings.local.json.tmp.5841.04984b2fb7ba  settings.local.json.tmp.8373.f9334fe51f32
.kiro/specs/attachment-upload-false-failure/: .config.kiro  bugfix.md  design.md  tasks.md  tasks.meta.json
.kiro/specs/lean-core/: design.md  feature-preservation-matrix.md  requirements.md  tasks.md  tasks.meta.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  attachment-upload.exploration.test.ts  breath.test.ts  breath.ts  main.tsx  protocol-fixtures.json  protocol-fixtures.ts  security.test.ts  security.ts  store.ts  trace.test.ts  trace.ts  ts-extension-loader.mjs  types.ts  websocket.ts
frontend/src/components/: BreathField.tsx  ChatView.tsx  CommitDialog.tsx  FileTree.tsx  GitPane.tsx  InputBox.tsx  InsightRail.tsx  Markdown.tsx  PermissionDialog.tsx  QrCode.tsx  QrDialog.tsx  QuestionDialog.tsx  SessionPicker.tsx  StatusBar.tsx  TechnicalTrace.tsx
frontend/src/store/: slices.ts  transitions.test.ts  transitions.ts
rust/: Cargo.toml  README.md  install.ps1  install.sh
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  factory.rs  lib.rs  provider.rs  retry.rs  sse.rs
rust/crates/api/tests/fixtures/: anthropic_error.json  anthropic_stream.sse  openai_error.json  openai_stream.sse
rust/crates/cli/: Cargo.toml
rust/crates/cli/examples/: two_agent_math.rs
rust/crates/cli/src/: attachments.rs  commands.rs  main.rs  project_info.rs  remote.rs  serve_http.rs  skill_watcher.rs  skills.rs
rust/crates/cli/src/serve_http/: connection.rs  http_error.rs  mod.rs  project_service.rs  protocol.rs  run_handler.rs  session_hub.rs  speech_service.rs  static_service.rs  upload_service.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: error.rs  extension.rs  lib.rs  message.rs  permissions.rs  run_event.rs  task.rs  usage.rs
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: agents.rs  compact.rs  context.rs  extensions.rs  hooks.rs  lib.rs  loop_.rs  prompt.rs  run.rs  session.rs  settings.rs  skills.rs  tokens.rs  trace.rs
rust/crates/engine/src/skills/: bundled.rs
rust/crates/engine/src/skills/bundled/: claude-api.md  code-review.md  debug.md  init.md  keybindings-help.md  loop.md  remember.md  review.md  security-review.md  simplify.md  update-config.md  verify.md
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: background.rs  executor.rs  lib.rs  mcp.rs  mcp_server.rs  memory.rs  permissions.rs  registry.rs  task_store.rs  tool.rs
rust/crates/tools/src/builtin/: agent.rs  ask.rs  background_tasks.rs  bash.rs  coordinator.rs  edit.rs  glob.rs  grep.rs  lsp.rs  memory.rs  mod.rs  read.rs  task_tools.rs  todo.rs  tool_search.rs  webfetch.rs  websearch.rs  write.rs
rust/crates/tools/tests/snapshots/: builtin_tool_contract.json
src/hooks/: usePasteHandler.ts  useTextInput.ts
src/ink/: parse-keypress.ts
