[package]
name = "nonoclaw-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Anthropic Messages API streaming client for NonoClaw"

[dependencies]
nonoclaw-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
