[package]
name = "nonoclaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NonoClaw — Rust rewrite of Claude Code (agent CLI)"

[[bin]]
name = "nonoclaw"
path = "src/main.rs"

[dependencies]
nonoclaw-core = { workspace = true }
nonoclaw-api = { workspace = true }
nonoclaw-tools = { workspace = true }
nonoclaw-engine = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
qrcode = "0.14"
notify = { workspace = true }
